Fixtures show details now featured as clean spreadsheet; fixed simple_form alignment in Fixture show; edited modal size; removed underline from a_link in header

--- a/app/assets/stylesheets/components/_modal_hover_button.scss
+++ b/app/assets/stylesheets/components/_modal_hover_button.scss
@@ -11,7 +11,7 @@
   transform: translateY(-50%);
   width: 320px;
   text-align: center;
-  background-color: $dark-gray;
+  background-color: #333;
 }
 
 .shape {
