--- a/app/assets/stylesheets/layouts/_index.scss
+++ b/app/assets/stylesheets/layouts/_index.scss
@@ -9,7 +9,9 @@ body {
 }
 
 #fixtures-table tr:hover td {
-  box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.2);
+  background-color: #FFFF66;
+  // background-color: $bright-blue;
   cursor: pointer;
 }
 
@@ -23,7 +25,7 @@ body {
 }
 
 .modal.modal-wide .modal-dialog {
-  max-width: 90%;
+  max-width: 60%;
 }
 .modal-wide .modal-body {
   overflow-y: auto;
