--- a/app/assets/stylesheets/pages/_fixtures_show.scss
+++ b/app/assets/stylesheets/pages/_fixtures_show.scss
@@ -1,7 +1,7 @@
 .card {
   background-color: #fff;
   padding: 1rem 2rem 1rem 2rem;
-  border-radius: 10px;
+  border-radius: 5px;
   margin-bottom: 3rem;
   margin-top: 1rem;
 }
